# citytalk

./: .gitignore  Cargo.toml  LICENSE  README.md  bot.toml.template  commands.toml
src/: bot.rs  conf.rs  main.rs  mcapi.rs  rcon.rs
