[package]
name = "citytalk"
version = "0.1.0"
authors = ["xuserwhat <quickn@cityarts.cf>"]

[dependencies]
telegram-bot = { git = "https://github.com/telegram-rs/telegram-bot.git" }
tokio-core = "0.1"
futures = "0.1"
toml = "0.4"
serde = "1.0.55"
serde_derive = "1.0.55"
serde_json = "1.0"
reqwest = "0.8.6"
rand = "0.5"
byteorder = "1"